[package]
name = "rust-iiif"
version = "0.1.0"
authors = ["Jacob Brown <j.h.brown@tcu.edu>"]

[dependencies]
iron        = "*"
persistent  = "*"
router      = "*"
mount       = "*"
urlencoded  = "*"
staticfile  = "*"
mime        = "*"
image       = "*"
itertools   = "0.4"
rustc-serialize = "*"

[dependencies.gmagick]
git = "https://github.com/kardeiz/rust-gmagick.git"